--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,8 @@
-hi?
+<div class="container">
+  <h1>Account Login</h1>
+  <form action="/login" method="POST" >
+    <input type="text" placeholder="Email" name="email" required>
+    <input type="text" placeholder="Password" name="password" required>
+    <button type="submit">Sing in</button>
+  </form>
+</div>
