--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@ form {
 form input {
   margin-top: 1rem;
   padding: 1rem;
+  width: 100%;
 }
 
 button {
@@ -29,4 +30,8 @@ button {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   width: 50%;
   border: solid 1px black;
+}
+
+button:hover {
+  cursor: pointer;
 }
