--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <div class="container">
+  <p>{{errorMassage}}</p>
   <h1>Account Login</h1>
   <form action="/login" method="POST" >
     <input type="text" placeholder="Email" name="email" required>
