feat: add authenticate function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="container">
-  <p>{{errorMassage}}</p>
+  <p>{{massage}}</p>
   <h1>Account Login</h1>
-  <form action="/login" method="POST" >
+  <form action="/" method="POST" >
     <input type="text" placeholder="Email" name="email" required>
     <input type="text" placeholder="Password" name="password" required>
     <button type="submit">Sing in</button>
